I have created three semantic html tags and other tags in side each

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,6 +7,50 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!--Header section-->
+    <header>
+    <h1>What is Git</h1>
+    <p>Git is a free, open-source version control system that's used by developers to track and manage source code.</p>
+    </header>
+    <!--Main section-->
+    <main>
+      <section>
+        <!--First and middle section-->
+        <p>
+          <h2>Why developers use git?</h2>
+          Developers use Git, a version control system, for a number of reasons, including: 
+Collaboration
+Git allows multiple developers to work on the same project at the same time without overwriting each other's changes. 
+Version control
+Git tracks changes to source code over time, so developers can revert to specific versions if needed. 
+<strogn>Backups</strogn>
+Git stores a complete history of all changes made to code, which can be helpful if data is lost or corrupted. 
+Distributed architecture
+Git's distributed architecture allows developers to store project source code and track changes more efficiently. 
+Merging
+Git allows developers to merge changes made by multiple people into a single file. 
+          <a href="#">Read more...</a>
+        </p>
+      </section>
+      <section>
+        <!--Second and middle  left side section-->
+        <p>
+          <h3>Main branch</h3>
+          <a href="#">Read more...</a>
+        </p>
+      </section>
+      <section>
+        <!--Third and middle right side section-->
+        <p>
+          <h3>New branch</h3>
+          <a href="#">Read more...</a>
+        </p>
+      </section>
+    </main>
+    <!--Footer section-->
+    <footer>
+
+    </footer>
     <!-- Add your HTML markup here t-->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
