--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -66,7 +66,7 @@
 
   </main>
   <!-- Footer Section -->
-  <footer>
+  <footer id="footer">
     <p>Learning and Exploring Web Development Skills at Code Your Future.</p>
 
     <p><strong>&copy; 2024</strong></p>
