Adjusted buttons and h1 and h2 style

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -34,7 +34,7 @@
         the basics of the industry and begin a career in website development. If you're interested in becoming a junior
         developer, it's helpful to learn more about the position and the steps needed to begin your career.
       </p>
-      <button>Read More</button>
+      <button onclick="window.open('https://www.atlassian.com/git/tutorials/what-is-git', '_blank')">Read More</button>
     </section>
     <section class="wrapper">
       <article class="article-wrapper">
@@ -53,7 +53,7 @@
           junior
           developer, it's helpful to learn more about the position and the steps needed to begin your career.
         </p>
-        <button class="btn-article">I am button</i></button>
+        <button onclick="window.open('https://www.atlassian.com/git/tutorials/what-is-git', '_blank')">Read More</button>
       </article>
 
       <article class="article-wrapper">
@@ -72,7 +72,7 @@
           junior
           developer, it's helpful to learn more about the position and the steps needed to begin your career.
         </p>
-        <button>I am button</button>
+        <button onclick="window.open('https://www.atlassian.com/git/tutorials/what-is-git', '_blank')">Read More</button>
       </article>
     </section>
   </main>
