added target to the icons

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -79,11 +79,11 @@
   <footer>
     <p class="media-text">&copy Karla Grajales <i class="fa-regular fa-face-laugh-wink"></i></p>
     <div class="social">
-      <a class="facebook" href="https://www.facebook.com/groups/front.designer"><i class="fa-brands fa-facebook"></i></a>
-      <a class="twitter" href="https://twitter.com/explore"><i class="fa-brands fa-twitter"></i></a>
-      <a class="youtube" href="https://www.youtube.com/watch?v=puLSsuG1YE4"><i class="fa-brands fa-youtube"></i></a>
-      <a class="instagram" href="https://www.instagram.com/codeyourfuture_/?hl=es"><i class="fa-brands fa-instagram"></i></a>
-      <a class="github" href="https://github.com/Grajales-K"><i class="fa-brands fa-github"></i></a>
+      <a class="facebook" href="https://www.facebook.com/groups/front.designer" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+      <a class="twitter" href="https://twitter.com/explore" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+      <a class="youtube" href="https://www.youtube.com/watch?v=puLSsuG1YE4" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+      <a class="instagram" href="https://www.instagram.com/codeyourfuture_/?hl=es" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a class="github" href="https://github.com/Grajales-K" target="_blank"><i class="fa-brands fa-github"></i></a>
     </div>
   </footer>
 
