--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wireframe</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href="images/git_favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
@@ -21,9 +22,12 @@
   </header>
   <main>
     <section class="section_main">
-      <h1>
-        What is Git?
-      </h1>
+      <figure class="figure_main">
+        <img class="image_main" src="images/git_logo.png" alt="Git logo">
+        <h1 class="caption_image_main">
+          What is Git?
+        </h1>
+      </figure>
     </section>
     <section class="section_secondary_wrapper">
       <article class="article_left">
