added buttons and contrast

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -56,16 +56,23 @@
             been designed with performance, security and flexibility in mind.
           </p>
         </div>
-        <a
-          href="https://www.techtarget.com/searchitoperations/definition/GitHub"
-          class="button"
-          >Read More</a
-        >
+        <div>
+          <button class="btn">
+            <a
+              href="https://www.techtarget.com/searchitoperations/definition/GitHub"
+              >Read More</a
+            >
+          </button>
+        </div>
       </article>
 
       <section class="columns">
         <article class="column">
-          <img src="/Wireframe/e3dd7.jpg" alt="git infomation" />
+          <img
+            class="second-img"
+            src="/Wireframe/e3dd7.jpg"
+            alt="git infomation"
+          />
           <h2>Why do developers need Git?</h2>
           <ul>
             <li>
@@ -96,15 +103,23 @@
               conflicts during merges.
             </li>
           </ul>
-          <a
-            href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in."
-            class="button"
-            >Read More</a
-          >
+
+          <div>
+            <button class="btn">
+              <a
+                href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in."
+                >Read More</a
+              >
+            </button>
+          </div>
         </article>
 
         <article class="column">
-          <img src="/Wireframe/git-branches-merge.png" alt="git branch" />
+          <img
+            class="second-img"
+            src="/Wireframe/git-branches-merge.png"
+            alt="git branch"
+          />
           <h2>What is a branch in Git?</h2>
           <p>
             Git branches are effectively a pointer to a snapshot of your
@@ -114,9 +129,14 @@
             the main code base, and it gives you the chance to clean up your
             future's history before merging it into the main branch.
           </p>
-          <a href="https://www.w3schools.com/GIT/git_branch.asp" class="button"
-            >Read More</a
-          >
+
+          <div>
+            <button class="btn">
+              <a href="https://www.w3schools.com/GIT/git_branch.asp"
+                >Read More</a
+              >
+            </button>
+          </div>
         </article>
       </section>
     </body>
