css styling the form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,12 +9,14 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Product Pick</h1>
-  </header>
+ 
   <main>
 
    <div class="wrapper">
+
+      <header>
+        <h1>Product Pick</h1>
+      </header>
       
       <p>Please fill out the form below to place your order.</p>
       <form>
@@ -58,19 +60,21 @@
           <input type="date" id="date" name="date">
         </fieldset>
 
-        <button type="submit">Place your order</button>
+        <button type="submit" id="button">Place your order</button>
 
       </form>
+
+      <footer>
+        <!-- change to your name-->
+        <h4>By Samira Hekmati</h4>
+      </footer>
 
     </div>
    
  
 
   </main>
-  <footer>
-    <!-- change to your name-->
-    <h2>By Samira Hekmati</h2>
-  </footer>
+  
 </body>
 
 </html>
