--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -32,12 +32,12 @@
     </div>
     </article>
     <div class="articles-container">
-    <article class="article">
+    <div class="article">
       <img class="developer-image"
            src="https://files.oaiusercontent.com/file-IrS4J1PBYvFUo9jJ9NBD84vN?se=2024-10-09T13%3A29%3A02Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D00791aac-7a8f-4783-ad26-0dfd3b9cb4d4.webp&sig=0nt4SuMc9Szr3ab7XZmCQeHAuSMqSzepUhRZqe87ZDA%3D"
            alt="a man who is sitting infront of his computer thinking about what is git?">
       <h1 class="topic">Why do developers need Git?</h1>
-      <p class="summary">
+      <p class="article-summary">
           Git supports branching and merging, allowing developers to experiment
           with new features without affecting the main codebase. Its
           decentralized nature means that every contributor has a full copy of
@@ -45,17 +45,15 @@
           data loss.
         </p>
         <a href="https://www.nobledesktop.com/blog/what-is-git-and-why-should-you-use-it" target="_blank">Read more</a>   
-        </article>
-        <article class="article">
+      </div>
+        <div class="article">
         <img class="git-branch-image"
            src="https://user-images.githubusercontent.com/21223421/111696461-03056580-883d-11eb-82c4-7f8d926629e6.png"
            alt="">
         <h1 id="git-branch">What is a branch in Git?</h1>
-        <p class="summary"> In Git, a branch is a new/separate version of the main repository also,In Git, a branch is essentially a pointer to a specific snapshot (commit) of your project. It allows you to work on different versions or features of a project simultaneously without affecting the main codebaseA branch is essentially a lightweight movable pointer to one of the commits.You can have multiple features or bug fixes in progress at the same time.</p>
+        <p class="article-summary"> In Git, a branch is a new/separate version of the main repository also,In Git, a branch is essentially a pointer to a specific snapshot (commit) of your project. It allows you to work on different versions or features of a project simultaneously without affecting the main codebaseA branch is essentially a lightweight movable pointer to one of the commits.You can have multiple features or bug fixes in progress at the same time.</p>
         <a href="https://www.w3schools.com/git/git_branch.asp#:~:text=In%20Git%2C%20a%20branch%20is%20a,new%2Fseparate%20version%20of%20the%20main%20repository." target="_blank">Read more</a> 
-     </article>
-     </div>
-      </main>   
+     </div>   
 </main>
 <footer>
   <p>&copy; 2024 My Awesome Website. All rights reserved.</p>
@@ -71,6 +69,6 @@
   </body> 
 
     <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+
 
 </html>
