--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,52 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!--Header section-->
-    <header>
+    <header class="header-container">
     <h1>What is Git</h1>
     <p>Git is a free, open-source version control system that's used by developers to track and manage source code.</p>
     </header>
     <!--Main section-->
-    <main>
-      <section>
+    <main class="main-container">
+      <section class="main-section">
         <!--First and middle section-->
         <p>
           <h2>Why developers use git?</h2>
-          Developers use Git, a version control system, for a number of reasons, including: 
-Collaboration
+          Developers use Git, for a number of reasons, including: 
+<span>Collaboration</span>
 Git allows multiple developers to work on the same project at the same time without overwriting each other's changes. 
 Version control
 Git tracks changes to source code over time, so developers can revert to specific versions if needed. 
-<strogn>Backups</strogn>
+<span>Backups</span>
 Git stores a complete history of all changes made to code, which can be helpful if data is lost or corrupted. 
 Distributed architecture
 Git's distributed architecture allows developers to store project source code and track changes more efficiently. 
 Merging
 Git allows developers to merge changes made by multiple people into a single file. 
-          <a href="#">Read more...</a>
+          <a href="https://git-scm.com/docs" target="_blank">Read more...</a>
         </p>
       </section>
-      <section>
+      <section class="left-section">
         <!--Second and middle  left side section-->
         <p>
-          <h3>Main branch</h3>
-          <a href="#">Read more...</a>
+          <h3>Master branch</h3>
+          The default branch name in Git is master . As you start making commits, you're given a master branch that points to the last commit you made.Every time you commit, the master branch pointer moves forward automatically. The “master” branch in Git is not a special branch.
+          <a href="https://git-scm.com/book/en/v2/Git-Branching-Branch-Management" target="_blank">Read more...</a>
         </p>
       </section>
-      <section>
+      <section class="right-section">
         <!--Third and middle right side section-->
         <p>
           <h3>New branch</h3>
-          <a href="#">Read more...</a>
+          The git branch command can be used to create a new branch. When you want to start a new feature, you create a new branch off main using git branch new_branch . Once created you can then use git checkout new_branch to switch to that branch.
+          <a href="https://git-scm.com/book/en/v2/Git-Branching-Basic-Branching-and-Merging" target="_blank">Read more...</a>
         </p>
       </section>
     </main>
     <!--Footer section-->
-    <footer>
-
+    <footer class="footer-container">
+    <p>Copyright &copy wireframe</p>
     </footer>
     <!-- Add your HTML markup here t-->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
