skeleton page code

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
+    <title>Git</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <header>
+      <nav>
+        <h2>Big G</h2>
+        <div>
+          <a href="#">Home</a>
+          <a href="#">Definitions</a>
+          <a href="#">Explanations</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+      
+      </section>
+    </main>
 </body>
 </html
