--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -21,7 +21,13 @@
     </header>
     <main>
       <section>
-      
+        <article id="git-definition">
+          <h2>What is Git?</h2>
+          <p>
+            Git is a version control system that tracks changes to files over time, making it ideal for collaborative projects. It allows developers to create branches for different features, merge changes seamlessly, and revert to previous versions if necessary. Its distributed nature ensures efficient workflows, even when working remotely.
+          </p>
+          <button><a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F">Read more</a></button>
+        </article>
       </section>
     </main>
 </body>
