--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,15 +14,49 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
-  </form>
+    <form id="orderForm">
+        <!-- Name Input -->
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required minlength="2" placeholder="Enter your name">
 
+        <!-- Email Input -->
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required placeholder="Enter your email">
+
+        <!-- Color Selection -->
+        <label for="color">Choose a T-Shirt Color:</label>
+        <select id="color" name="color" required>
+            <option value="">Select a color</option>
+            <option value="red">Red</option>
+            <option value="blue">Blue</option>
+            <option value="green">Green</option>
+        </select>
+
+        <!-- Size Selection -->
+        <label for="size">Choose a T-Shirt Size:</label>
+        <select id="size" name="size" required>
+            <option value="">Select a size</option>
+            <option value="XS">XS</option>
+            <option value="S">S</option>
+            <option value="M">M</option>
+            <option value="L">L</option>
+            <option value="XL">XL</option>
+            <option value="XXL">XXL</option>
+        </select>
+
+        <!-- Delivery Date (Manually set the min and max values) -->
+        <label for="deliveryDate">Delivery Date (within 4 weeks):</label>
+        <input type="date" id="deliveryDate" name="deliveryDate" required min="2024-10-10" max="2024-11-07">
+
+        <!-- Submit Button -->
+        <button type="submit">Place Order</button>
+    </form>
+</body>
+</html>
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By saba farjamfard</h2>
   </footer>
 </body>
-
 </html>
