--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,41 +12,82 @@
 <body>
   <!-- Add your HTML markup here -->
   <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-  <header>
-      <h1>
-        Git
-      </h1>
-      <h2>
-        The most popular version control tool
-      </h2>
+  <header class="flex_boxes_vertical_center">
+    <h1 class="header_text_h1">
+      Git
+    </h1>
+    <h2 class="header_text_h2">
+      The most popular version control tool
+    </h2>
   </header>
   <main>
-    <section class="section_main">
-      <figure class="figure_main">
+    <section class="section_main flex_boxes_vertical_top">
+      <figure class="figure_main flex_boxes_horizontal_center">
         <img class="image_main" src="images/git_logo.png" alt="Git logo">
         <h1 class="caption_image_main">
           What is Git?
         </h1>
       </figure>
+      <p class="brief">
+        So, what is Git in a nutshell? This is an important section to absorb, because if you understand what Git is and
+        the fundamentals of how it works, then using Git effectively will probably be much easier for you. As you learn
+        Git, try to clear your mind of the things you may know about other VCSs, such as CVS, Subversion or
+        Perforce — doing so will help you avoid subtle confusion when using the tool. Even though Git’s user interface
+        is
+        fairly similar to these other VCSs, Git stores and thinks about information in a very different way, and
+        understanding these differences will help you avoid becoming confused while using it.
+        <a class="read_on" href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F">More details</a>
+      </p>
     </section>
-    <section class="section_secondary_wrapper">
-      <article class="article_left">
+    <section class="secondary_section_wrapper flex_boxes_horizontal_space_around_top_vertical">
+      <section class="section_secondary_left flex_boxes_vertical_top">
         <h2>
           Why do developers need Git?
         </h2>
-      </article>
-      <article class="article_right">
+        <article class="article_left flex_boxes_horizontal_space_around_center_vertical">
+          <picture class="picture_left">
+            <img src="images/need_git.png" alt="Why do you need Git?">
+          </picture>
+          <aside class="subbrief">
+            <p class="left">
+              GitHub is a web-based interface allowing real-time collaboration. It encourages teams to work together in
+              developing code, building web pages and updating content. For a quick introduction to GitHub, who uses it,
+              and
+              why, <a class="read_on" href="https://www.coursera.org/articles/what-is-git">read on</a>
+            </p>
+          </aside>
+        </article>
+      </section>
+      <section class="section_secondary_right flex_boxes_vertical_top">
         <h2>
           What is a branch in Git?
         </h2>
-      </article>
+        <article class="article_right flex_boxes_horizontal_space_around_center_vertical">
+          <aside class="subbrief">
+            <p class="right">
+              Git Branching is a feature available in most modern version control systems. Branching in other VCS's can
+              be an expensive operation in both time and disk space. In Git, branches are a part of your everyday
+              development process. <a class="read_on" href="https://www.atlassian.com/git/tutorials/using-branches#:~:text=Git%20branches%20are%20effectively%20a,branch%20to%20encapsulate%20your%20changes.">Here more details</a>
+            </p>
+          </aside>
+          <picture class="picture_right">
+            <img src="images/git_branch.svg" alt="Branching in Git">
+          </picture>
+        </article>
+      </section>
     </section>
   </main>
-  <footer>
-    <article>
-      © Stanislav Starishko - 2024
-    </article>
+  <footer class="flex_boxes_vertical_center">
+    <h4>
+      © 2024 by Stanislav Starishko
+    </h4>
   </footer>
+  <script>
+    document.querySelectorAll('a').forEach(link => {
+      link.setAttribute('target', '_blank');
+      link.setAttribute('rel', 'noopener noreferrer'); // for security
+    });
+  </script>
 </body>
 
-</html
+</html>
