fixed the html tage error and removed the section tag and used the div tag instead as mentioned on the validator website

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -22,7 +22,7 @@
         </p>
         <a href="https://www.atlassian.com/git/tutorials/what-is-git">Read More</a>
       </article>
-    <section id="second-part">
+    <div id="second-part">
       <article>
         <h2>Why do developers need Git?</h2>
         <img src="./images/user.png" alt="">
@@ -35,10 +35,10 @@
         <p>FGit branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes. T</p>
         <a href="https://www.atlassian.com/git/tutorials/using-branches#:~:text=Git%20branches%20are%20effectively%20a,branch%20to%20encapsulate%20your%20changes.">Read More</a>
       </article>
-    </section>
+    </div>
     </main>
     <footer>
       To learn more about Git from a pro contact Serna Malala @ sm.sernamalala@gmail.com
     </footer>
 </body>
-</html
+</html>
