Improved accessibility by adding ARIA attributes in date entry and button submission.

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -55,8 +55,10 @@
        <!-- DELIVERY DATE -->
       <div>
         <label for="date">Delivery Date</label>
-        <input type="date" name="date" id="date" required min="2024-10-10" max="2024-11-10">
+        <input type="date" name="date" id="date" required min="2024-10-10" max="2024-11-10" aria-live="polite">
       </div>
+
+      <button type="submit" aria-label="Submit order">Submit</button>
   </form>
 
   </main>
