--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-      <section>
+      <section id="three-articles">
         <article id="article-1">
           <h3 id="what-is-git">What is Git?</h3>
           <p>
