--- a/MultiPage-Clone/index.html
+++ b/MultiPage-Clone/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- Add your markup here -->
-
+    <h1>Purposes of this website</h1>
 
     <!-- Please leave this in to credit the creators of this design -->
     <p>This website design was created by Wix.com, and is used here for strictly educational purposes.</p>
