--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- Add your HTML markup here -->
+    <p>This is an empty page</p>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
