Add html structure for header and footer

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,37 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <!-- #region Header  -->
+    <header class="header">
+      <h1 class="main_title">Exploring Git: Version Control Made Simple</h1>
+      <div class="main_description">
+        Dive into the world of Git, the distributed version control system
+        revolutionizing software development. Discover what Git is, why it's
+        indispensable for developers, and the powerful concept of branching that
+        enhances collaboration and innovation. Whether you’re a beginner or
+        looking to refine your skills, this guide provides key insights into
+        managing code efficiently and effectively.
+      </div>
+    </header>
+    <!-- #endregion Header  -->
+    <!-- #region Footer  -->
+    <footer class="footer">
+      <div class="footer_info">
+        More information about Git can be found
+        <a href="https://git-scm.com/" target="_blank">here</a>
+      </div>
+      <div class="footer_copyright-block">
+        &copy; Copyright - 2024. Created by
+        <a
+          href="https://github.com/nadika-zavodovska"
+          target="_blank"
+          class="copyright_link"
+          aria-label="Open github of author's of website"
+          >Nadika</a
+        >
+        with love ❤️
+      </div>
+    </footer>
+    <!-- #endregion Footer  -->
 </body>
 </html
