--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,6 +9,7 @@
   <body>
      <header>
       <h1>Guide to git</h1>
+      <p>The free open source distributed version control system primarily used by developers to manage their source code. See how it works.</p>
      </header>
      
 
