--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -11,6 +11,7 @@
       <h1>Guide to git</h1>
       <p>The free open source distributed version control system primarily used by developers to manage their source code. See how it works.</p>
      </header>
+     <main>
      
 
 </html><div class="container">
