created a section element

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,6 +12,8 @@
       <p>The free open source distributed version control system primarily used by developers to manage their source code. See how it works.</p>
      </header>
      <main>
+      <section>
+
      
 
 </html><div class="container">
