added an href with a link

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -17,7 +17,9 @@
           <h2>What is Git?</h2>
           <p>Git, open-source distributed version control system (DVCS) created by Linux developer Linus Torvalds in 2005.
           <br>As of 2024 Git is the most widely used version control system and is used by both individuals and companies<br> including Microsoft, Netflix, and Google.</br></br></p>
-
+          <a href="https://www.britannica.com/technology/Git">Read more</a>
+          </article>
+      </section>
      
 
 </html>
