--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -19,7 +19,7 @@
           <br>As of 2024 Git is the most widely used version control system and is used by both individuals and companies<br> including Microsoft, Netflix, and Google.</br></br></p>
           <a href="https://www.britannica.com/technology/Git">Read more</a>
           </article>
-          <article>
+          <article></article>
       </section>
      
 
