created an unordered list

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -20,13 +20,13 @@
           <a href="https://www.britannica.com/technology/Git">Read more</a>
           </article>
           <article>
-<<<<<<< HEAD
             <h2>Why do developers need Git?</h2>
-             <ul></ul>
+             <ul><li>Tracking Changes: Git allows you to track every change made to your codebase</li>
+              <li>Collaboration: Git enables multiple developers to work on the same project simultaneously</li>
+              <li>Open Source and Collaboration: Git is widely used in open-source projects, making it the standard for collaborative development</li>
+              <li>Rollback and Recovery: If you introduce a bug or make a mistake, Git lets you easily revert to previous working versions of your code, ensuring you can recover from errors quickly.</li></ul>
           </article>
           
-=======
->>>>>>> parent of 97706f4 (article)
       </section>
      
 
