--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -24,7 +24,8 @@
              <ul><li>Tracking Changes: Git allows you to track every change made to your codebase</li>
               <li>Collaboration: Git enables multiple developers to work on the same project simultaneously</li>
               <li>Open Source and Collaboration: Git is widely used in open-source projects, making it the standard for collaborative development</li>
-              <li>Rollback and Recovery: If you introduce a bug or make a mistake, Git lets you easily revert to previous working versions of your code, ensuring you can recover from errors quickly.</li></ul>
+              <li>Rollback and Recovery: If you introduce a bug or make a mistake, Git lets you easily revert to previous working versions of your code, ensuring you can recover from errors quickly.</li>
+             </ul>
           </article>
           
       </section>
