2nd href link to my list

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -26,6 +26,7 @@
               <li>Open Source and Collaboration: Git is widely used in open-source projects, making it the standard for collaborative development</li>
               <li>Rollback and Recovery: If you introduce a bug or make a mistake, Git lets you easily revert to previous working versions of your code, ensuring you can recover from errors quickly.</li>
              </ul>
+             <a href="https://www.britannica.com/technology/Git">Read more</a>
           </article>
           <article></article>
           
