--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -28,7 +28,9 @@
              </ul>
              <a href="https://www.britannica.com/technology/Git">Read more</a>
           </article>
-          <article></article>
+          <article>
+            <h3>What is a branch in Git?</h3> 
+          </article>
           
       </section>
      
