added a paragraph with breaks

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -30,6 +30,8 @@
           </article>
           <article>
             <h3>What is a branch in Git?</h3> 
+            <p>In Git, a branch is essentially a pointer to a specific commit in your project's history. 
+              <br>Think of it like a bookmark that lets you jump back to a particular point in time where your code was in a specific state.</br></p>
           </article>
           
       </section>
