--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,21 +13,25 @@
      </header>
      <main>
       <section>
+
         <article>
           <h2>What is Git?</h2>
           <p>Git, open-source distributed version control system (DVCS) created by Linux developer Linus Torvalds in 2005.
           <br>As of 2024 Git is the most widely used version control system and is used by both individuals and companies<br> including Microsoft, Netflix, and Google.</br></br></p>
           <a href="https://www.britannica.com/technology/Git">Read more</a>
           </article>
+
           <article>
             <h2>Why do developers need Git?</h2>
-             <ul><li>Tracking Changes: Git allows you to track every change made to your codebase</li>
+             <ul>
+              <li>Tracking Changes: Git allows you to track every change made to your codebase</li>
               <li>Collaboration: Git enables multiple developers to work on the same project simultaneously</li>
               <li>Open Source and Collaboration: Git is widely used in open-source projects, making it the standard for collaborative development</li>
               <li>Rollback and Recovery: If you introduce a bug or make a mistake, Git lets you easily revert to previous working versions of your code, ensuring you can recover from errors quickly.</li>
              </ul>
-             <a href="https://www.britannica.com/technology/Git">Read more</a>
+             <a href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in.">Read more</a>
           </article>
+
           <article>
             <h3>What is a branch in Git?</h3> 
             <p>In Git, a branch is essentially a pointer to a specific commit in your project's history. 
@@ -42,4 +46,3 @@
       </footer>
 </html>
 
-     
