create html tags and link the results page to the form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,14 +13,31 @@
     <h1>Product Pick</h1>
   </header>
   <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+  <form action="results.html" method="get">
+    <div>
+      <label>Name</label>
+      <input name="name">
+    </div>
+    <div>
+      <label>Email address</label>
+      <input name="Email address">
+    </div>
+    <div>
+      <label>Color</label>
+      <input>
+  </div>
+  <div>
+      <label>Size</label>
+      <input>
+  </div>
+
+    <button>Submit</button>
   </form>
 
   </main>
   <footer>
     <!-- change to your name-->
+     <h1></h1>
     <h2>By HOMEWORK SOLUTION</h2>
   </footer>
 </body>
