Fix path for the style.css file

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <!-- #region Header  -->
     <header class="header">
-      <h1 class="main_title">Exploring Git: Version Control Made Simple</h1>
+      <h1 class="main_title">Exploring Git: Version ContSamsung BAR Plusrol Made Simple</h1>
       <div class="main_description">
         Dive into the world of Git, the distributed version control system
         revolutionizing software development. Discover what Git is, why it's
