Add footer styles

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,8 +9,8 @@
   <body>
     <!-- #region Header  -->
     <header class="header">
-      <h1 class="main_title">Exploring Git: Version ContSamsung BAR Plusrol Made Simple</h1>
-      <div class="main_description">
+      <h1 class="main_title text-center">Exploring Git: Version ContSamsung BAR Plusrol Made Simple</h1>
+      <div class="main_description text-center">
         Dive into the world of Git, the distributed version control system
         revolutionizing software development. Discover what Git is, why it's
         indispensable for developers, and the powerful concept of branching that
@@ -46,10 +46,8 @@
 </main>
     <!-- #endregion Main  -->
 
-
-
     <!-- #region Footer  -->
-    <footer class="footer">
+    <footer class="footer text-center">
       <div class="footer_info">
         More information about Git can be found
         <a href="https://git-scm.com/" target="_blank">here</a>
@@ -63,7 +61,7 @@
           aria-label="Open github of author's of website"
           >Nadika</a
         >
-        with love ❤️
+        with love 🤍
       </div>
     </footer>
     <!-- #endregion Footer  -->
