Articles Section added

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -11,5 +11,26 @@
       <h1>What is Git?</h1>
       <p>A tool every developer should know about.</p>
   </header>
+  <main>
+    <section class="articles">
+        <article class="first-article">
+            <h2>What is Git?</h2>
+            <p>Git is a distributed version control system that helps track changes in source code during software development.</p>
+            <a href="#">Read more</a>
+        </article>
+
+        <article>
+            <h2>Why Do Developers Need Git?</h2>
+            <p>Git enables multiple developers to collaborate on the same project and tracks the history of changes for better project management.</p>
+            <a href="#">Read more</a>
+        </article>
+
+        <article>
+            <h2>What is a Branch in Git?</h2>
+            <p>A branch in Git represents an independent line of development, allowing developers to work on features separately.</p>
+            <a href="#">Read more</a>
+        </article>
+    </section>
+</main>
 </body>
 </html
